welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not found: value avance5
avance5()
^MethodsPicture:28: error: not found: value avance5
avance5()
^