welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
dam()
avance(5)
dam()
avance5()
dam()
avance();avance();avance();avance();avance();
gauche()
avance();avance();avance();avance();avance()
droite()
dam()
avance();avance();avance();avance();avance();
dam()
avance();avance();avance();avance();avance();
dam()
avance();avance();avance();avance();avance();
gauche()
avance();avance();avance();avance();avance();
droite()
dam()
avance();avance();avance();avance();avance();
dam()
avance();avance();avance();avance();avance();
dam()
avance();avance();avance();avance();avance();
gauche()
avance5()
droite()
}

def faireV(c:Color) {//V d'une certaine couleur
	avance()
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	recule()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
}

def dam() {//damier multicolor
	var c1:Color = Color.YELLOW
	faireV(c1)
	var c2:Color = Color.RED
	faireV(c2)
	var c3:Color = Color.BLUE
	faireV(c3)
	var c4:Color = Color.GREEN
	faireV(c4)
}
